--- a/backend/email/recover.html
+++ b/backend/email/recover.html
@@ -4,7 +4,7 @@
 
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Password Reset</title>
+  <title>Hokusai - Recuperar a senha</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style type="text/css">
   /**
@@ -102,11 +102,11 @@
   </style>
 
 </head>
-<body style="background-color: #e9ecef;">
+<body style="background-color: rgb(18,18,18);">
 
   <!-- start preheader -->
   <div class="preheader" style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
-    A preheader is the short summary text that follows the subject line when an email is viewed in the inbox.
+    Pedido de recuperação de senha do Hokusai App. 
   </div>
   <!-- end preheader -->
 
@@ -115,7 +115,7 @@
 
     <!-- start logo -->
     <tr>
-      <td align="center" bgcolor="#e9ecef">
+      <td align="center" bgcolor="#121212">
         <!--[if (gte mso 9)|(IE)]>
         <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
         <tr>
@@ -124,8 +124,8 @@
         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
           <tr>
             <td align="center" valign="top" style="padding: 36px 24px;">
-              <a href="https://sendgrid.com" target="_blank" style="display: inline-block;">
-                <img src="./img/paste-logo-light@2x.png" alt="Logo" border="0" width="48" style="display: block; width: 48px; max-width: 48px; min-width: 48px;">
+              <a href="https://app.hokusai.codes/" target="_blank" style="display: inline-block;">
+                <img src="http://cdn.hokusai.codes/logo-symb-nobg.png" alt="Logo" border="0"  style="display: block; ">
               </a>
             </td>
           </tr>
@@ -141,7 +141,7 @@
 
     <!-- start hero -->
     <tr>
-      <td align="center" bgcolor="#e9ecef">
+      <td align="center" bgcolor="#121212">
         <!--[if (gte mso 9)|(IE)]>
         <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
         <tr>
@@ -149,8 +149,8 @@
         <![endif]-->
         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
           <tr>
-            <td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
-              <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Reset Your Password</h1>
+            <td align="left" bgcolor="#1e1e1e" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #1b1b1b;">
+              <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px; color: rgb(190, 190, 190);">Recupere a sua senha</h1>
             </td>
           </tr>
         </table>
@@ -165,7 +165,7 @@
 
     <!-- start copy block -->
     <tr>
-      <td align="center" bgcolor="#e9ecef">
+      <td align="center" bgcolor="#121212">
         <!--[if (gte mso 9)|(IE)]>
         <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
         <tr>
@@ -175,22 +175,22 @@
 
           <!-- start copy -->
           <tr>
-            <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-              <p style="margin: 0;">Tap the button below to reset your customer account password. If you didn't request a new password, you can safely delete this email.</p>
+            <td align="left" bgcolor="#1e1e1e" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; ">
+              <p style="margin: 0; color: rgb(190, 190, 190)">Clique no botão abaixo para resetar sua senha Hokusai. Se não foi você que enviou esse e-mail, você pode ignorar essa mensagem.</p>
             </td>
           </tr>
           <!-- end copy -->
 
           <!-- start button -->
           <tr>
-            <td align="left" bgcolor="#ffffff">
+            <td align="left" bgcolor="#1e1e1e">
               <table border="0" cellpadding="0" cellspacing="0" width="100%">
                 <tr>
-                  <td align="center" bgcolor="#ffffff" style="padding: 12px;">
+                  <td align="center" bgcolor="#1e1e1e" style="padding: 12px;">
                     <table border="0" cellpadding="0" cellspacing="0">
                       <tr>
-                        <td align="center" bgcolor="#1a82e2" style="border-radius: 6px;">
-                          <a href="{{body.url}}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Do Something Sweet</a>
+                        <td align="center" bgcolor="#7c3aed" style="border-radius: 6px;">
+                          <a href="{{body.url}}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Recuperar a Senha</a>
                         </td>
                       </tr>
                     </table>
@@ -203,17 +203,17 @@
 
           <!-- start copy -->
           <tr>
-            <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-              <p style="margin: 0;">If that doesn't work, copy and paste the following link in your browser:</p>
-              <p style="margin: 0;"><a href="{{body.url}}" target="_blank">{{body.url}}</a></p>
+            <td align="left" bgcolor="#1e1e1e" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
+              <p style="margin: 0; color: rgb(190, 190, 190)">Caso o botão não funcione, clique no link abaixo:</p>
+              <p style="margin: 0;"><a style="color: #7c3aed;" href="{{body.url}}" target="_blank">Recuperar a senha</a></p>
             </td>
           </tr>
           <!-- end copy -->
 
           <!-- start copy -->
           <tr>
-            <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
-              <p style="margin: 0;">Cheers,<br> Paste</p>
+            <td align="left" bgcolor="#1e1e1e" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #1b1b1b">
+              <p style="margin: 0; color: rgb(190, 190, 190)">Até a próxima,<br> Hokusai</p>
             </td>
           </tr>
           <!-- end copy -->
@@ -230,7 +230,7 @@
 
     <!-- start footer -->
     <tr>
-      <td align="center" bgcolor="#e9ecef" style="padding: 24px;">
+      <td align="center" bgcolor="#121212" style="padding: 24px;">
         <!--[if (gte mso 9)|(IE)]>
         <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
         <tr>
@@ -240,21 +240,11 @@
 
           <!-- start permission -->
           <tr>
-            <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-              <p style="margin: 0;">You received this email because we received a request for [type_of_action] for your account. If you didn't request [type_of_action] you can safely delete this email.</p>
+            <td align="center" bgcolor="#1e1e1e" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
+              <p style="margin: 0;">Você recebeu esse email porque nós recebemos um pedido de recuperação de senha para a sua conta. Se você não fez esse pedido você pode excluir esse e-mail.</p>
             </td>
           </tr>
           <!-- end permission -->
-
-          <!-- start unsubscribe -->
-          <tr>
-            <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-              <p style="margin: 0;">To stop receiving these emails, you can <a href="https://sendgrid.com" target="_blank">unsubscribe</a> at any time.</p>
-              <p style="margin: 0;">Paste 1234 S. Broadway St. City, State 12345</p>
-            </td>
-          </tr>
-          <!-- end unsubscribe -->
-
         </table>
         <!--[if (gte mso 9)|(IE)]>
         </td>
