small bugs fixes

--- a/backend/email/recover.html
+++ b/backend/email/recover.html
@@ -125,7 +125,7 @@
           <tr>
             <td align="center" valign="top" style="padding: 36px 24px;">
               <a href="https://app.hokusai.codes/" target="_blank" style="display: inline-block;">
-                <img src="http://cdn.hokusai.codes/logo-symb-nobg.png" alt="Logo" border="0"  style="display: block; ">
+                <img src="https://cdn.hokusai.codes/logo-symb-nobg.png" alt="Logo" border="0"  style="display: block; ">
               </a>
             </td>
           </tr>
