--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,7 @@
     <meta name="theme-color" content="#121212">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" crossorigin="anonymous">
